try to fix figure spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1009,11 +1009,12 @@ pre code {
   font-weight: 300;
   font-size: 12px;
   color: #311e3e;
-  margin: 30px;
+  margin: 15px;
+  height: 20%;
 }
 
 .science-figure .the-figure {
-  height: 100%;
+  height: 80%;
   width: 100%;
 }
 
